More Changes to Contact Page

--- a/faculty.html
+++ b/faculty.html
@@ -636,27 +636,35 @@
 
 
     <footer id="footerFa" class="footer row large-12">
-      <div id="footContact" class="large-12 medium-12 small-12 columns">
+      <div class="map" alt="Google map of Cordova Elementary in Cordova, Tennessee"></div>
+      <div id="footContact" class="large-12 columns">
         <div class="icons"><img src="img/contactIcon.png" alt="Icon of phone receiver"></div>
-        <h1>Contact</h1>
+        <h1 class="">Contact</h1>
         <div class="graphicEle">
           <img src="img/graphicRed.png" alt="Small red, horizontal graphic" border="0">
         </div>
       </div>
-
-      <div class="mapWrap large-6 medium-6 small-12 columns">
-        <div class="map"><a href="https://www.google.com/maps/place/Cordova+Elementary+School/@35.1462439,-89.7710587,16.54z/data=!4m5!3m4!1s0x0:0xf014b1462d7bcc7a!8m2!3d35.1462!4d-89.7691258" target="_blank"><img src="img/ce_map.jpg" title="Click To Get Directions to Cordova Elementary" alt="Google map of Cordova Elementary in Cordova, Tennessee"></a></div>
-      </div>
-
-      <div id="footAddress" class="large-6 medium-6 small-12 columns">
-        <h2>Cordova Elementary</h2>
-        <p>750 North Sanga<br />Cordova, TN 38018<br /><a href="https://www.google.com/maps/place/Cordova+Elementary+School/@35.1462439,-89.7710587,16.54z/data=!4m5!3m4!1s0x0:0xf014b1462d7bcc7a!8m2!3d35.1462!4d-89.7691258" target="_blank">Get Directions</a><br /><span>School Hours:</span> 8:15 AM - 3:15 PM</p><br />
-        <p><span>Kimbrelle B. Lewis, Principal</span><br />
-        <span>Email:</span> lewiskb@scsk12.org<br />
-        <span>Phone:</span> (901) 416-1700<br />
-        <span>Fax:</span> (901) 416-1701</p>
+      <div id="footAddress" class="large-12 small-12 columns">
+        <div class="large-3 medium-12 small-12 columns">
+          <h2>Cordova Elementary</h2>
+          <p>750 North Sanga<br />Cordova, TN 38018<br />
+          <a href="https://www.google.com/maps/place/Cordova+Elementary+School/@35.1462439,-89.7710587,16.54z/data=!4m5!3m4!1s0x0:0xf014b1462d7bcc7a!8m2!3d35.1462!4d-89.7691258" target="_blank">Get Directions</a><br />
+          <span>School Hours:</span> 8:15 AM - 3:15 PM</p>
+        </div>
+        <div class="large-3 medium-12 columns">
+          <img src="img/divider.png">
+        </div>
+        <div class="large-3 medium-12 small-12 columns end">
+          <p><span>Kimbrelle B. Lewis, Principal</span><br />
+          <span>Email:</span> lewiskb@scsk12.org<br />
+          <span>Phone:</span> (901) 416-1700<br />
+          <span>Fax:</span> (901) 416-1701</p>
+        </div>
       </div>
     </footer>
+
+
+
 
     <script src="js/vendor/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
