--- a/index.html
+++ b/index.html
@@ -44,7 +44,20 @@
               	<li id="linkNews" class="slideUnder" title="Announcements for Cordova Elementary" alt="Announcements for Cordova Elementary"><a href="#article1">Announcements</a></li>
               	<li id="linkCalendar" class="slideUnder" title="Calendar for Cordova Elementary" alt="Calendar for Cordova Elementary"><a href="#article2">Calendar</a></li>
                 <li id="linkResources" class="slideUnder" title="Cordova Elementary Resources" alt="Cordova Elementary Resources"><a href="#global">Resources</a></li>
-              	<li id="linkFaculty" class="slideUnder" title="Cordova Elementary Faculty and Staff" alt="Cordova Elementary Faculty and Staff"><a href="faculty.html">Faculty</a></li>
+              	<li id="linkFaculty" class="slideUnder" title="Cordova Elementary Faculty and Staff" alt="Cordova Elementary Faculty and Staff"><a href="faculty.html">Faculty</a>
+                  <ul>
+                    <li id="linkAdmin" class="slideUnderDrop"><a href="faculty.html">Administration</a></li>
+                    <li id="linkOffice" class="slideUnderDrop"><a href="faculty.html#faculty">Office Staff</a></li>
+                    <li id="linkKind" class="slideUnderDrop"><a href="faculty.html#office">Kidergartin</a></li>
+                    <li id="linkFirst" class="slideUnderDrop"><a href="faculty.html#teachers">1st Grade</a></li>
+                    <li id="linkSecond" class="slideUnderDrop"><a href="faculty.html#first">2nd Grade</a></li>
+                    <li id="linkThird" class="slideUnderDrop"><a href="faculty.html#second">3rd Grade</a></li>
+                    <li id="linkFourth" class="slideUnderDrop"><a href="faculty.html#third">4th Grade</a></li>
+                    <li id="linkFifth" class="slideUnderDrop"><a href="faculty.html#fourth">5th Grade</a></li>
+                    <li id="linkSpecial" class="slideUnderDrop"><a href="faculty.html#fifth">Specialists</a></li>
+                    <li id="linkStaff" class="slideUnderDrop"><a href="faculty.html#specialists">Staff</a></li>
+                  </ul>
+                </li>
                 <li id="linkAbout" class="slideUnder" title="About Cordova Elementary" alt="About Cordova Elementary"><a href="about.html">About</a></li>
              		<li id="linkContact" class="slideUnder" title="Contact Cordova Elementary" alt="Contact Cordova Elementary"><a href="#footerMain">Contact</a></li>
               </ul>
