Added About Page

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             </div>
           </div>
           <div class="large-12 large-centered small-12">
-            <p>The mission of Cordova Elementary School is to provide a safe and challenging environment that is committed to helping all of our students successfully achieve their maximum potential.<span class="readmore"><a href="#"> Read&nbsp;more...</a></span></p>
+            <p>The mission of Cordova Elementary School is to provide a safe and challenging environment that is committed to helping all of our students successfully achieve their maximum potential.<span class="readmore"><a href="about.html"> Read&nbsp;more...</a></span></p>
           </div>
         </div>
       </div>
