Added Buttons and About Page

--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
               <div class="panel">
                 <div class="row">
                   <div class="intro">
-                    <h1>Cordova Elementary</h1>
+                    <h1>About</h1>
                     <div class="graphicEle large-12 columns">
                       <img src="img/graphicRed.png" alt="Small red, horizontal graphic" border="0">
                     </div>
@@ -119,15 +119,44 @@
           <!-- NEWS -->
           <div id="article1" class="large-6 medium-6 small-12 columns">
             <div id="headContainer" class="large-6 medium-6 large-centered small-12 columns">
-              <div class="icons large-3 columns"><img src="img/newIcon.png" alt="Newspaper Icon"></div>
-              <h1 class="large-3 columns end">Vision</h1>
-              <div class="graphicEle large-12 columns">
+              <h1>Vision</h1>
+              <div class="graphicEle">
                 <img src="img/graphicRed.png" alt="Small red, horizontal graphic" border="0">
               </div>
             </div>
 
             <div class="article1Container">
+              <h3>At Cordova Elementary Optional School, we are dedicated to exceptional teaching and learning where:</h3>
+              <p>Students:</p>
+              <ul>
+                <li>Are focused on learning;</li>
+                <li>Feel a sense of community where me turns to we, and students use positive peer interaction to encourage academic achievement;</li>
+                <li>Are global, independent and accountable learners, responsible for their own growth and achievement; and</li>
+                <li>Are actively engaged in scholarly activities, independent study and community involvement.</li>
+              </ul>
 
+              <p>Teachers:</p>
+              <ul>
+                <li>Work collaboratively to share and implement a variety of effective instructional strategies;</li>
+                <li>Utilize innovative technology to enhance learning;</li>
+                <li>Foster a cultivating environment in each classroom; and</li>
+                <li>Analyze student performance data frequently to meet the individual needs of each child.</li>
+              </ul>
+
+              <p>The School:</p>
+              <ul>
+                <li>Requires the highest form of professional talk among students, teachers, and parents;</li>
+                <li>Promotes and works toward the commonly-held vision of teaching and learning;</li>
+                <li>Creates schedules that maximize time for instruction and collaboration; and</li>
+                <li>Leads improvement through hands-on visibility and classroom engagement.</li>
+              </ul>
+
+              <p>Parents and Community:</p>
+              <ul>
+                <li>Are so involved in the school that they can describe student goals and needs;</li>
+                <li>Are actively involved in a variety of committees and services; and</li>
+                <li>Have regular meetings with school leadership and teachers to learn about how to support teaching and learning.</li>
+              </ul>
             </div>
         </div>
 
@@ -135,14 +164,24 @@
         <!-- EVENTS -->
         <div id="article2" class="large-6 medium-6 small-12 columns">
           <div id="headContainer2" class="large-6 medium-6 large-centered small-12 columns">
-            <div class="icons large-3 columns"><img src="img/calendarIcon.png" alt="Calendar Icon"></div>
-            <h1 class="large-3 columns end">Beliefs</h1>
-            <div class="graphicEle large-12 columns">
+            <h1>Beliefs</h1>
+            <div class="graphicEle">
               <img src="img/graphicRed.png" alt="Small red, horizontal graphic" border="0">
             </div>
           </div>
-          <div class="large-12 small-12 columns">
 
+          <div class="article1Container">
+            <h3>The faculty and staff at Cordova Elementary School believe:</h3>
+            <p>All student success is achieved by the collaboration of parents, community and school.</p>
+            <p>Student achievement results shall be the focus for all policies and decision making.</p>
+            <p>All students learn best in a safe, stimulating, and nurturing environment.</p>
+            <p>All students should be held to high expectations and should perform at or above the state and local school standards.</p>
+            <p>All students should be given the opportunity to develop his or her strengths and talents to their highest potential.</p>
+            <p>All students should be given opportunities to enhance their learning experiences through the use of technology and the arts.</p>
+            <p>All students should be supported with diverse instructional practices that are research-based data- driven, challenging and promote academic achievement.</p>
+            <p>All students should receive a variety of continual assessments to evaluate their achievement levels and address their individual learning styles.</p>
+            <p>All students should engage in a variety of assessment measures to evaluate their achievement levels and guide classroom instruction.</p>
+            <p>All students are expected to apply learned skills to real-life situations.</p>
           </div>
         </div>
       </div>
@@ -152,72 +191,53 @@
 
 
     <!-- GLOBAL LEADERS -->
-    <section id="global">
-      <div class="large-12">
-        <div class="icons"><img src="img/globalIcon.png" alt="Icon of half globe with 3 business men on other half" longdesc=""></div>
-        <h1>Developing Global<br />Leaders and Learners</h1>
-        <div class="graphicEle">
-          <img src="img/graphicRed.png" alt="Small red, horizontal graphic" border="0">
-        </div>
-      </div>
-      <div class="overlay"></div>
-    </section>
-
-
-
-    <!-- RESOURCES/TWITTER -->
-    <section id="resource-twit">
+    <section id="globalLeaders">
       <div class="row">
         <div class="large-12 small-12 columns">
-
-          <!-- NEWS -->
-          <div id="article1" class="large-6 medium-6 small-12 columns">
-            <div id="headContainer" class="large-6 medium-6 large-centered small-12 columns">
-              <div class="icons large-3 columns"><img src="img/resourceIcon.png" alt="Hammer laying cris-cross with qrench" longdesc=""></div>
-              <h1 class="large-3 columns end">Resources</h1>
-              <div class="graphicEle large-12 columns">
-                <img src="img/graphicRed.png" alt="Small red, horizontal graphic" border="0">
-              </div>
-            </div>
-            <div class="large-12 large-centered small-12 columns">
-              <div class="large-6 small-12 columns">
-                <a href="#"><h2>HEALTH CLINICS</h2></a>
-                <a href="#"><h2>TNREADY HELPS</h2></a>
-                <a href="#"><h2>KHAN ACADEMY</h2></a>
-              </div>
-              <div class="large-6 small-12 columns">
-                <a href="#"><h2>SUPPLY LIST</h2></a>
-                <a href="#"><h2>EDMODO</h2></a>
-              </div>
-            </div>
-            <div class="large-12 small-12 columns">
-              <div class="large-12 large-centered small-12 columns">
-                <a href="#" class="moreRes">More Resources</a>
-              </div>
-            </div>
+          <h1>Global Leadership Traits</h1>
+          <div class="graphicEle large-12">
+            <img src="img/graphicRed.png" alt="Small red, horizontal graphic" border="0">
           </div>
 
-
-        <!-- EVENTS -->
-        <div id="article2" class="large-6 medium-6 small-12 columns">
-          <div id="headContainer2" class="large-6 medium-6 large-centered small-12 columns">
-            <div class="icons large-3 columns"><img src="img/twittIcon2.png" alt="Twitter Icon"></div>
-            <h1 class="large-3 columns end">Social</h1>
-            <div class="graphicEle large-12 columns">
-              <img src="img/graphicRed.png" alt="Small red, horizontal graphic" border="0">
+          <div class="panel large-12 medium-12 small-12">
+            <div class="large-12 large-centered medium-12 small-12">
+              <div class="large-3 medium-3 small-12 columns">
+                <p>1. Think Globally<br />Begin with the End in Mind<br />Put First Things First<br />Are Positive and Responsible</p>
+              </div>
+              <div class="large-3 medium-3 small-12 columns">
+                <p>2. Appreciate Cultural Diversity<br />Recognize and like differences<br />Understand others<br />Know each person is important</p>
+              </div>
+              <div class="large-3 medium-3 small-12 columns">
+                <p>3. Build Partnerships and Community<br />Experience team building and give back<br />Take care of the school and community environment<br />Are good negotiators, while patiently impatient</p>
+              </div>
+              <div class="large-3 medium-3 small-12 columns">
+                <p>4. Have Life-long Curiosity<br />Think strategically<br />Knows success of individuals depends on the success of all<br />Seeks new ideas, strategies and increased knowledge</p>
+              </div>
             </div>
-          </div>
-          <div class="large-12 small-12 columns">
 
+            <div class="large-12 large-centered medium-12 small-12">
+              <div class="large-3 medium-3 small-12 columns">
+                <p>5. Express Vision with Enthusiasm<br />Knows other’s worth and potential<br />Connects concepts to actions<br />Is committed and hard working</p>
+              </div>
+              <div class="large-3 medium-3 small-12 columns">
+                <p> 6. Are Innovative and Creative<br />Use unique ways and talents to get things done<br />Express and present information well in many ways<br />
+                  Use technology and media for learning and sharing information</p>
+              </div>
+              <div class="large-3 medium-3 small-12 columns">
+                <p>7. Strengthen Body and Mind<br />Share feelings and caring in a healthy way<br />Have a healthy lifestyle<br />Are responsible to friends, family and self</p>
+              </div>
+              <div class="large-3 medium-3 small-12 columns">
+
+              </div>
             </div>
           </div>
         </div>
       </div>
     </section>
-    <!-- END QUICK LINKS/TWITTER -->
 
 
 
+   <!-- FOOTER -->
     <footer id="footerAb" class="footer row large-12">
       <div class="map" alt="Google map of Cordova Elementary in Cordova, Tennessee"></div>
       <div id="footContact" class="large-12 columns">
