--- a/faculty.html
+++ b/faculty.html
@@ -648,6 +648,7 @@
 
 
 
+    <!-- FOOTER -->
     <footer id="footerFa" class="footer row large-12">
       <div class="map" alt="Google map of Cordova Elementary in Cordova, Tennessee"></div>
       <div id="footContact" class="large-12 columns">
