--- a/index.html
+++ b/index.html
@@ -206,7 +206,6 @@
                   </div>
                 </div>
 
-
                 <div class="large-12 small-12 columns">
                   <div class="large-6 medium-6 small-12 columns">
                     <div class="newsImg large-6 medium-6 columns"><img src="img/img3.jpg" alt=""></div>
@@ -227,7 +226,6 @@
                 </div>
               </div>
 
-
               <div class="imgSlide">
                 <div class="large-12 small-12 columns">
                   <div class="large-6 medium-6 small-12 columns">
@@ -247,7 +245,6 @@
                     </div>
                   </div>
                 </div>
-
 
                 <div class="large-12 small-12 columns">
                   <div class="large-6 medium-6 small-12 columns">
@@ -270,7 +267,6 @@
               </div>
             </div>
 
-
             <div id="moreArtBTN" class="large-12 small-12 columns">
               <div class="large-12 large-centered small-12 columns">
                 <button type="button" name="button">More Announcements</button>
@@ -291,59 +287,119 @@
               <img src="img/graphicRed.png" alt="Small red, horizontal graphic" border="0">
             </div>
           </div>
-          <div class="large-12 small-12 columns">
-            <div class="large-6 medium-6 small-12 columns">
-              <div class="eventDate">
-                <h3>Aug</h3>
-                <h3>11</h3>
+
+          <div class="article2Container">
+            <div class="imgSlide2 imgCurrSlide2">
+              <div class="large-12 small-12 columns">
+                <div class="large-6 medium-6 small-12 columns">
+                  <div class="eventDate">
+                    <h3>Aug</h3>
+                    <h3>11</h3>
+                  </div>
+                  <div class="eventArticle">
+                    <h3>Gold-Gain School</h3>
+                    <p>CES was recognized as a Gold Gain EPIC (Effective Practice Incentive Community) School for the 2009-2010 year.</p>
+                    <div class="readmore"><a href="#">Read more...</a></div>
+                  </div>
+                </div>
+                <div class="large-6 medium-6 small-12 columns">
+                  <div class="eventDate">
+                    <h3>Aug</h3>
+                    <h3>15</h3>
+                  </div>
+                  <div class="eventArticle">
+                    <h3>Robotics Team Wins</h3>
+                    <p>1st Place Mechanical Design West TN FIRST LEGO League Championship @ The University of Memphis</p>
+                    <div class="readmore"><a href="#">Read more...</a></div>
+                  </div>
+                </div>
               </div>
-              <div class="eventArticle">
-                <h3>Gold-Gain School</h3>
-                <p>CES was recognized as a Gold Gain EPIC (Effective Practice Incentive Community) School for the 2009-2010 year.</p>
-                <div class="readmore"><a href="#">Read more...</a></div>
+
+              <div class="large-12 small-12 columns">
+                <div class="large-6 medium-6 small-12 columns">
+                  <div class="eventDate">
+                    <h3>Aug</h3>
+                    <h3>15</h3>
+                  </div>
+                  <div class="eventArticle">
+                    <h3>Spelling Bee</h3>
+                    <p>Congratulations to the spelling bee winners.</p>
+                    <div class="readmore"><a href="#">Read more...</a></div>
+                  </div>
+                </div>
+                <div class="large-6 medium-6 small-12 columns">
+                  <div class="eventDate">
+                    <h3>Aug</h3>
+                    <h3>16</h3>
+                  </div>
+                  <div class="eventArticle">
+                    <h3>Robotics Team Wins</h3>
+                    <p>1st Place Mechanical Design West TN FIRST LEGO League Championship @ The University of Memphis</p>
+                    <div class="readmore"><a href="#">Read more...</a></div>
+                  </div>
+                </div>
               </div>
             </div>
-            <div class="large-6 medium-6 small-12 columns">
-              <div class="eventDate">
-                <h3>Aug</h3>
-                <h3>15</h3>
+
+            <div class="imgSlide2">
+              <div class="large-12 small-12 columns">
+                <div class="large-6 medium-6 small-12 columns">
+                  <div class="eventDate">
+                    <h3>Aug</h3>
+                    <h3>15</h3>
+                  </div>
+                  <div class="eventArticle">
+                    <h3>Spelling Bee</h3>
+                    <p>Congratulations to the spelling bee winners.</p>
+                    <div class="readmore"><a href="#">Read more...</a></div>
+                  </div>
+                </div>
+                <div class="large-6 medium-6 small-12 columns">
+                  <div class="eventDate">
+                    <h3>Aug</h3>
+                    <h3>16</h3>
+                  </div>
+                  <div class="eventArticle">
+                    <h3>Robotics Team Wins</h3>
+                    <p>1st Place Mechanical Design West TN FIRST LEGO League Championship @ The University of Memphis</p>
+                    <div class="readmore"><a href="#">Read more...</a></div>
+                  </div>
+                </div>
               </div>
-              <div class="eventArticle">
-                <h3>Robotics Team Wins</h3>
-                <p>1st Place Mechanical Design West TN FIRST LEGO League Championship @ The University of Memphis</p>
-                <div class="readmore"><a href="#">Read more...</a></div>
+
+              <div class="large-12 small-12 columns">
+                <div class="large-6 medium-6 small-12 columns">
+                  <div class="eventDate">
+                    <h3>Aug</h3>
+                    <h3>11</h3>
+                  </div>
+                  <div class="eventArticle">
+                    <h3>Gold-Gain School</h3>
+                    <p>CES was recognized as a Gold Gain EPIC (Effective Practice Incentive Community) School for the 2009-2010 year.</p>
+                    <div class="readmore"><a href="#">Read more...</a></div>
+                  </div>
+                </div>
+                <div class="large-6 medium-6 small-12 columns">
+                  <div class="eventDate">
+                    <h3>Aug</h3>
+                    <h3>15</h3>
+                  </div>
+                  <div class="eventArticle">
+                    <h3>Robotics Team Wins</h3>
+                    <p>1st Place Mechanical Design West TN FIRST LEGO League Championship @ The University of Memphis</p>
+                    <div class="readmore"><a href="#">Read more...</a></div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
 
-
-          <div class="large-12 small-12 columns">
-            <div class="large-6 medium-6 small-12 columns">
-              <div class="eventDate">
-                <h3>Aug</h3>
-                <h3>15</h3>
-              </div>
-              <div class="eventArticle">
-                <h3>Spelling Bee</h3>
-                <p>Congratulations to the spelling bee winners.</p>
-                <div class="readmore"><a href="#">Read more...</a></div>
-              </div>
-            </div>
-            <div class="large-6 medium-6 small-12 columns">
-              <div class="eventDate">
-                <h3>Aug</h3>
-                <h3>16</h3>
-              </div>
-              <div class="eventArticle">
-                <h3>Robotics Team Wins</h3>
-                <p>1st Place Mechanical Design West TN FIRST LEGO League Championship @ The University of Memphis</p>
-                <div class="readmore"><a href="#">Read more...</a></div>
-              </div>
-            </div>
-            <div class="large-12 small-12 columns">
-              <div class="large-3 large-centered small-12 columns">
-                <a href="#" class="viewcalendar">Full Calendar</a>
-              </div>
+          <div id="moreCalBTN" class="large-12 small-12 columns">
+            <div class="large-12 large-centered small-12 columns">
+              <button type="button" name="button">More Events</button>
+              <div class="viewcalendar"><a href="#">Full Calendar</a></div>
+              <button class="caBTN" type="button" name="button">More Events</button>
+              <div id="morecalMobile"><a href="#">Full Calendar</a></div>
             </div>
           </div>
         </div>
