--- a/index.html
+++ b/index.html
@@ -148,20 +148,20 @@
             </div>
             <div class="large-12 large-centered small-12 columns">
               <div class="large-3 small-12 columns">
-                <a href="http://www.scsk12.org/registration/" target="_blank"><h2 alt="REGISTRATION">REGISTRATION</h2></a>
-                <a href="https://scstn.powerschool.com/public/" target="_blank"><h2 alt="POWERSCHOOL">POWERSCHOOL</h2></a>
+                <h2 alt="REGISTRATION"><a href="http://www.scsk12.org/registration/" target="_blank">REGISTRATION</a></h2>
+                <h2 alt="POWERSCHOOL"><a href="https://scstn.powerschool.com/public/" target="_blank">POWERSCHOOL</a></h2>
               </div>
               <div class="large-3 small-12 columns">
-              <a href="http://www.scsk12.org/calendar/files/2017/2017-18%20Final.pdf" target="_blank"><h2 alt="2017-18 CALENDAR">2017-18 CALENDAR</h2></a>
-                <a href="http://www.scsk12.org/lunch/" target="_blank"><h2 alt="MENUS">MENUS</h2></a>
+                <h2 alt="2017-18 CALENDAR"><a href="http://www.scsk12.org/calendar/files/2017/2017-18%20Final.pdf" target="_blank">2017-18 CALENDAR</a></h2>
+                <h2 alt="MENUS"><a href="http://www.scsk12.org/lunch/" target="_blank">MENUS</a></h2>
               </div>
               <div class="large-3 small-12 columns">
-                <a href="http://www.scsk12.org/transportation/" target="_blank"><h2 alt="TRANSPORTATION">TRANSPORTATION</h2></a>
-                <a href="http://www.scsk12.org/academic/files/2017/student%20handbook%202017-18(6.30.17)final.pdf" target="_blank"><h2 alt="STUDENT HANDBOOK">STUDENT HANDBOOK</h2></a>
+                <h2 alt="TRANSPORTATION"><a href="http://www.scsk12.org/transportation/" target="_blank">TRANSPORTATION</a></h2>
+                <h2 alt="STUDENT HANDBOOK"><a href="http://www.scsk12.org/academic/files/2017/student%20handbook%202017-18(6.30.17)final.pdf" target="_blank">STUDENT HANDBOOK</a></h2>
               </div>
               <div class="large-3 small-12 columns">
-                <a href="http://www.scsk12.org/policy/files/files/6000%20Students/6021%20Student%20Dress%20Code(3).pdf" target="_blank"><h2 alt="DRESS CODE">DRESS CODE</h2></a>
-                <a href="http://www.scsk12.org/safe/" target="_blank"><h2 alt="REPORT SAFETY TIPS">REPORT SAFETY TIPS</h2></a>
+                <h2 alt="DRESS CODE"><a href="http://www.scsk12.org/policy/files/files/6000%20Students/6021%20Student%20Dress%20Code(3).pdf" target="_blank">DRESS CODE</a></h2>
+                <h2 alt="REPORT SAFETY TIPS"><a href="http://www.scsk12.org/safe/" target="_blank">REPORT SAFETY TIPS</a></h2>
               </div>
             </div>
           </div>
@@ -439,13 +439,13 @@
             </div>
             <div class="large-12 large-centered small-12 columns">
               <div class="large-6 small-12 columns">
-                <a href="http://www.scsk12.org/clinic/" target="_blank"><h2>HEALTH CLINICS</h2></a>
-                <a href="http://www.tn.gov/education/article/tnready-parent-resources?PID=1177" target="_blank"><h2>TNREADY HELPS</h2></a>
-                <a href="#"><h2>KHAN ACADEMY</h2></a>
+                <h2><a href="http://www.scsk12.org/clinic/" target="_blank">HEALTH CLINICS</a></h2>
+                <h2><a href="http://www.tn.gov/education/article/tnready-parent-resources?PID=1177" target="_blank">TNREADY HELPS</a></h2>
+                <h2><a href="#"><h2>KHAN ACADEMY</a></h2>
               </div>
               <div class="large-6 small-12 columns">
-                <a href="#"><h2>SUPPLY LIST</h2></a>
-                <a href="#"><h2>EDMODO</h2></a>
+                <h2><a href="#">SUPPLY LIST</a></h2>
+                <h2><a href="#">EDMODO</a></h2>
               </div>
             </div>
             <div class="large-12 small-12 columns">
