--- a/faculty.html
+++ b/faculty.html
@@ -19,10 +19,10 @@
         <!-- SOCIAL MEDIA AND PHONE NUMBER -->
         <div id="socialNumber">
           <div id="socialWrap">
-            <div class="phone" alt="Cordova Elementary's phone number">(901) 416-1700</div>
+            <div class="phone" alt="Cordova Elementary's phone number"><a href="tel:+19014161700">(901) 416-1700</a></div>
             <div id="social" class="icons">
-              <a href="https://www.facebook.com/CordovaElementary?_rdr=p"><img src="img/facebookIcon.png" alt="Cordova Elementary's Facebook Page www.facebook.com/CordovaElementary"></a>
-              <a href="https://twitter.com/CordovaCubs"><img src="img/twittIcon.png" alt="Cordova Elementary's Twitter Page www.twitter.com/CordovaCubs"></a>
+              <a href="https://www.facebook.com/CordovaElementary?_rdr=p" target="_blank"><img src="img/facebookIcon.png" alt="Cordova Elementary's Facebook Page www.facebook.com/CordovaElementary"></a>
+              <a href="https://twitter.com/CordovaCubs" target="_blank"><img src="img/twittIcon.png" alt="Cordova Elementary's Twitter Page www.twitter.com/CordovaCubs"></a>
             </div>
           </div>
         </div>
@@ -670,8 +670,8 @@
         </div>
         <div class="large-3 medium-12 small-12 columns end">
           <p><span>Kimbrelle B. Lewis, Principal</span><br />
-          <span>Email:</span> lewiskb@scsk12.org<br />
-          <span>Phone:</span> (901) 416-1700<br />
+            <span>Email:</span> <a href="mailto:lewiskb@scsk12.org">lewiskb@scsk12.org</a><br />
+            <span>Phone:</span> <a href="tel:+19014161700">(901) 416-1700</a><br />
           <span>Fax:</span> (901) 416-1701</p>
         </div>
       </div>
