--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cordova Elementary in Cordova, Tennessee</title>
+    <link rel="icon" href="img/favicon.jpg" type="image/jpg">
     <link rel="stylesheet" href="css/index.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Open+Sans+Condensed:300" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
@@ -19,10 +20,10 @@
         <!-- SOCIAL MEDIA AND PHONE NUMBER -->
         <div id="socialNumber">
           <div id="socialWrap">
-            <div class="phone" alt="Cordova Elementary's phone number">(901) 416-1700</div>
+            <div class="phone" alt="Cordova Elementary's phone number"><a href="tel:+19014161700">(901) 416-1700</a></div>
             <div id="social" class="icons">
-              <a href="https://www.facebook.com/CordovaElementary?_rdr=p"><img src="img/facebookIcon.png" alt="Cordova Elementary's Facebook Page www.facebook.com/CordovaElementary"></a>
-              <a href="https://twitter.com/CordovaCubs"><img src="img/twittIcon.png" alt="Cordova Elementary's Twitter Page www.twitter.com/CordovaCubs"></a>
+              <a href="https://www.facebook.com/CordovaElementary?_rdr=p" target="_blank"><img src="img/facebookIcon.png" alt="Cordova Elementary's Facebook Page www.facebook.com/CordovaElementary"></a>
+              <a href="https://twitter.com/CordovaCubs" target="_blank"><img src="img/twittIcon.png" alt="Cordova Elementary's Twitter Page www.twitter.com/CordovaCubs"></a>
             </div>
           </div>
         </div>
@@ -89,8 +90,7 @@
             </div>
           </div>
         </div>
-
-      <!-- <div id="bckRotate"><img src="img/ce_HeroImg2.jpg"></div> -->
+        
 
       <div id="bck">
           <ul id="bckRotate">
@@ -127,7 +127,7 @@
             </div>
           </div>
           <div class="large-12 large-centered small-12">
-            <p>The mission of Cordova Elementary School is to provide a safe and challenging environment that is committed to helping all of our students successfully achieve their maximum potential.<span class="readmore"><a href="about.html"> Read&nbsp;more...</a></span></p>
+            <p>The mission of Cordova Elementary School is to provide a safe and challenging environment that is committed to helping all of our students successfully achieve their maximum potential.<span class="readmore"><a href="about.html#missionAb"> Read&nbsp;more...</a></span></p>
           </div>
         </div>
       </div>
@@ -498,8 +498,8 @@
         </div>
         <div class="large-3 medium-12 small-12 columns end">
           <p><span>Kimbrelle B. Lewis, Principal</span><br />
-          <span>Email:</span> lewiskb@scsk12.org<br />
-          <span>Phone:</span> (901) 416-1700<br />
+          <span>Email:</span> <a href="mailto:lewiskb@scsk12.org">lewiskb@scsk12.org</a><br />
+          <span>Phone:</span> <a href="tel:+19014161700">(901) 416-1700</a><br />
           <span>Fax:</span> (901) 416-1701</p>
         </div>
       </div>
