--- a/about.html
+++ b/about.html
@@ -19,10 +19,10 @@
         <!-- SOCIAL MEDIA AND PHONE NUMBER -->
         <div id="socialNumber">
           <div id="socialWrap">
-            <div class="phone" alt="Cordova Elementary's phone number">(901) 416-1700</div>
+            <div class="phone" alt="Cordova Elementary's phone number"><a href="tel:+19014161700">(901) 416-1700</a></div>
             <div id="social" class="icons">
-              <a href="https://www.facebook.com/CordovaElementary?_rdr=p"><img src="img/facebookIcon.png" alt="Cordova Elementary's Facebook Page www.facebook.com/CordovaElementary"></a>
-              <a href="https://twitter.com/CordovaCubs"><img src="img/twittIcon.png" alt="Cordova Elementary's Twitter Page www.twitter.com/CordovaCubs"></a>
+              <a href="https://www.facebook.com/CordovaElementary?_rdr=p" target="_blank"><img src="img/facebookIcon.png" alt="Cordova Elementary's Facebook Page www.facebook.com/CordovaElementary"></a>
+              <a href="https://twitter.com/CordovaCubs" target="_blank"><img src="img/twittIcon.png" alt="Cordova Elementary's Twitter Page www.twitter.com/CordovaCubs"></a>
             </div>
           </div>
         </div>
@@ -59,7 +59,7 @@
                   </ul>
                 </li>
                 <li id="linkAbout" class="currentLink slideUnder" title="About Cordova Elementary" alt="About Cordova Elementary"><a href="#aboutHome">About</a></li>
-             		<li id="linkContactFa" class="slideUnder" title="Contact Cordova Elementary" alt="Contact Cordova Elementary"><a href="#footerAb">Contact</a></li>
+             		<li id="linkContactAb" class="slideUnder" title="Contact Cordova Elementary" alt="Contact Cordova Elementary"><a href="#footerAb">Contact</a></li>
               </ul>
             </section>
           </nav>
@@ -251,7 +251,7 @@
         <div class="large-3 medium-12 small-12 columns">
           <h2>Cordova Elementary</h2>
           <p>750 North Sanga<br />Cordova, TN 38018<br />
-          <a href="https://www.google.com/maps/place/Cordova+Elementary+School/@35.1462439,-89.7710587,16.54z/data=!4m5!3m4!1s0x0:0xf014b1462d7bcc7a!8m2!3d35.1462!4d-89.7691258" target="_blank">Get Directions</a><br />
+          <a href="https://www.google.com/maps/place/Cordova+Elementary+School/@35.1462439,-89.7710587,16.54z/data=!4m5!3m4!1s0x0:0xf014b1462d7bcc7a!8m2!3d35.1462!4d-89.7691258" target="_blank" alt="Get Directions to Cordova Elementary">Get Directions/View Map</a><br />
           <span>School Hours:</span> 8:15 AM - 3:15 PM</p>
         </div>
         <div class="large-3 medium-12 columns">
@@ -259,8 +259,8 @@
         </div>
         <div class="large-3 medium-12 small-12 columns end">
           <p><span>Kimbrelle B. Lewis, Principal</span><br />
-          <span>Email:</span> lewiskb@scsk12.org<br />
-          <span>Phone:</span> (901) 416-1700<br />
+          <span>Email:</span> <a href="mailto:lewiskb@scsk12.org">lewiskb@scsk12.org</a><br />
+          <span>Phone:</span> <a href="tel:+19014161700">(901) 416-1700</a><br />
           <span>Fax:</span> (901) 416-1701</p>
         </div>
       </div>
