RWD and Scroll Button

--- a/faculty.html
+++ b/faculty.html
@@ -93,6 +93,12 @@
 
 
 
+    <button class="scrollBTN">
+      <img src="img/upArr.png" border="0">
+    </button>
+
+
+
     <!-- FACULTY -->
     <section id="faculty">
       <div class="row">
