--- a/index.html
+++ b/index.html
@@ -70,6 +70,12 @@
 
 
 
+      <button class="scrollBTN">
+        <img src="img/upArr.png" border="0">
+      </button>
+
+
+
       <!--HOME-->
       <section id="home">
       	<div id="homeWrap" class="row">
@@ -90,7 +96,7 @@
             </div>
           </div>
         </div>
-        
+
 
       <div id="bck">
           <ul id="bckRotate">
