--- a/about.html
+++ b/about.html
@@ -93,6 +93,12 @@
 
 
 
+    <button class="scrollBTN">
+      <img src="img/upArr.png" border="0">
+    </button>
+
+
+
     <!-- MISSION STATEMENT -->
     <section id="missionAb">
       <div class="row">
@@ -119,14 +125,14 @@
 
           <!-- NEWS -->
           <div id="article1" class="large-6 medium-6 small-12 columns">
-            <div id="headContainer" class="large-6 medium-6 large-centered small-12 columns">
+            <div id="headContainer" class="large-12 large-centered small-12">
               <h1>Vision</h1>
               <div class="graphicEle">
                 <img src="img/graphicRed.png" alt="Small red, horizontal graphic" border="0">
               </div>
             </div>
 
-            <div class="article1Container">
+            <div class="article1Container large-12 small-12">
               <h3>At Cordova Elementary Optional School, we are dedicated to exceptional teaching and learning where:</h3>
               <p>Students:</p>
               <ul>
@@ -164,14 +170,14 @@
 
         <!-- EVENTS -->
         <div id="article2" class="large-6 medium-6 small-12 columns">
-          <div id="headContainer2" class="large-6 medium-6 large-centered small-12 columns">
+          <div id="headContainer2" class="large-12 large-centered small-12">
             <h1>Beliefs</h1>
             <div class="graphicEle">
               <img src="img/graphicRed.png" alt="Small red, horizontal graphic" border="0">
             </div>
           </div>
 
-          <div class="article1Container">
+          <div class="article1Container large-12 small-12">
             <h3>The faculty and staff at Cordova Elementary School believe:</h3>
             <p>All student success is achieved by the collaboration of parents, community and school.</p>
             <p>Student achievement results shall be the focus for all policies and decision making.</p>
@@ -194,7 +200,7 @@
     <!-- GLOBAL LEADERS -->
     <section id="globalLeaders">
       <div class="row">
-        <div class="large-12 small-12 columns">
+        <div class="large-12 small-12">
           <h1>Global Leadership Traits</h1>
           <div class="graphicEle large-12">
             <img src="img/graphicRed.png" alt="Small red, horizontal graphic" border="0">
