--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     <script src="js/vendor/modernizr.js"></script>
   </head>
 
@@ -133,7 +134,7 @@
             </div>
           </div>
           <div class="large-12 large-centered small-12">
-            <p>The mission of Cordova Elementary School is to provide a safe and challenging environment that is committed to helping all of our students successfully achieve their maximum potential.<span class="readmore"><a href="about.html#missionAb"> Read&nbsp;more...</a></span></p>
+            <p>The mission of Cordova Elementary School is to provide a safe and challenging environment that is committed to helping all of our students successfully achieve their maximum potential.<span class="readmore"><a href="about.html"> Read&nbsp;more...</a></span></p>
           </div>
         </div>
       </div>
@@ -462,17 +463,17 @@
           </div>
 
 
-        <!-- EVENTS -->
-        <div id="article2" class="large-6 medium-6 small-12 columns">
-          <div id="headContainer2" class="large-6 medium-6 large-centered small-12 columns">
-            <div class="icons large-3 columns"><img src="img/twittIcon2.png" alt="Twitter Icon"></div>
-            <h1 class="large-3 columns end">Social</h1>
-            <div class="graphicEle large-12 columns">
-              <img src="img/graphicRed.png" alt="Small red, horizontal graphic" border="0">
+          <!-- EVENTS -->
+          <div id="article2" class="large-6 medium-6 small-12 columns">
+            <div id="headContainer2" class="large-6 medium-6 large-centered small-12 columns">
+              <div class="icons large-3 columns"><img src="img/twittIcon2.png" alt="Twitter Icon"></div>
+              <h1 class="large-3 columns end">Social</h1>
+              <div class="graphicEle large-12 columns">
+                <img src="img/graphicRed.png" alt="Small red, horizontal graphic" border="0">
+              </div>
             </div>
-          </div>
-          <div class="large-12 small-12 columns">
-
+            <div class="large-12 large-centered small-12">
+              <div class="twitterFeed large-6 large-centered medium-10 medium-centered small-9 small-centered columns end"><a class="twitter-timeline" href="https://twitter.com/CordovaCubs?ref_src=twsrc%5Etfw">Tweets by CordovaCubs</a></div>
             </div>
           </div>
         </div>
