Added To Top Button

--- a/about.html
+++ b/about.html
@@ -59,7 +59,13 @@
                     <li id="linkStaff" class="slideUnderDrop"><a href="faculty.html#specialists">Staff</a></li>
                   </ul>
                 </li>
-                <li id="linkAbout" class="currentLink slideUnder" title="About Cordova Elementary" alt="About Cordova Elementary"><a href="#aboutHome">About</a></li>
+                <li id="linkAbout" class="currentLink slideUnder" title="About Cordova Elementary" alt="About Cordova Elementary"><a href="#aboutHome">About</a>
+                  <ul>
+                    <li id="linkMission" class="slideUnderDrop"><a href="#aboutHome">Mission</a></li>
+                    <li id="linkVision" class="slideUnderDrop"><a href="#missionAb">Vision/Beliefs</a></li>
+                    <li id="linkLeader" class="slideUnderDrop"><a href="#globalLeaders">Leaders</a></li>
+                  </ul>
+                </li>
              		<li id="linkContactAb" class="slideUnder" title="Contact Cordova Elementary" alt="Contact Cordova Elementary"><a href="#footerAb">Contact</a></li>
               </ul>
             </section>
@@ -93,9 +99,12 @@
 
 
 
-    <button class="scrollBTN">
-      <img src="img/upArr.png" border="0">
-    </button>
+    <div class="scrollWrap">
+      <button class="scrollBTN">
+        <img src="img/upArr.png" border="0">
+        <p>To Top</p>
+      </button>
+    </div>
 
 
 
@@ -119,7 +128,7 @@
 
 
     <!-- NEWS/EVENTS-->
-    <section class="squareWrap">
+    <section id="vision" class="squareWrap">
       <div class="row">
         <div class="large-12 small-12 columns">
 
