--- a/index.html
+++ b/index.html
@@ -60,7 +60,13 @@
                     <li id="linkStaff" class="slideUnderDrop"><a href="faculty.html#specialists">Staff</a></li>
                   </ul>
                 </li>
-                <li id="linkAbout" class="slideUnder" title="About Cordova Elementary" alt="About Cordova Elementary"><a href="about.html">About</a></li>
+                <li id="linkAbout" class="slideUnder" title="About Cordova Elementary" alt="About Cordova Elementary"><a href="about.html">About</a>
+                  <ul>
+                    <li id="linkMission" class="slideUnderDrop"><a href="about.html">Mission</a></li>
+                    <li id="linkVision" class="slideUnderDrop"><a href="about.html#missionAb">Vision/Beliefs</a></li>
+                    <li id="linkLeaders" class="slideUnderDrop"><a href="about.html#globalLeaders">Leaders</a></li>
+                  </ul>
+                </li>
              		<li id="linkContact" class="slideUnder" title="Contact Cordova Elementary" alt="Contact Cordova Elementary"><a href="#footerMain">Contact</a></li>
               </ul>
             </section>
@@ -71,9 +77,13 @@
 
 
 
-      <button class="scrollBTN">
-        <img src="img/upArr.png" border="0">
-      </button>
+      <div class="scrollWrap">
+        <button class="scrollBTN">
+          <img src="img/upArr.png" border="0">
+          <p>To Top</p>
+        </button>
+      </div>
+
 
 
 
