--- a/faculty.html
+++ b/faculty.html
@@ -59,7 +59,13 @@
                     <li id="linkStaff" class="slideUnderDrop"><a href="#specialists">Staff</a></li>
                   </ul>
                 </li>
-                <li id="linkAbout" class="slideUnder" title="About Cordova Elementary" alt="About Cordova Elementary"><a href="about.html">About</a></li>
+                <li id="linkAbout" class="slideUnder" title="About Cordova Elementary" alt="About Cordova Elementary"><a href="about.html">About</a>
+                  <ul>
+                    <li id="linkMission" class="slideUnderDrop"><a href="about.html">Mission</a></li>
+                    <li id="linkVision" class="slideUnderDrop"><a href="about.html#missionAb">Vision/Beliefs</a></li>
+                    <li id="linkLeaders" class="slideUnderDrop"><a href="about.html#globalLeaders">Leaders</a></li>
+                  </ul>
+                </li>
              		<li id="linkContactFa" class="slideUnder" title="Contact Cordova Elementary" alt="Contact Cordova Elementary"><a href="#footerFa">Contact</a></li>
               </ul>
             </section>
@@ -93,9 +99,12 @@
 
 
 
-    <button class="scrollBTN">
-      <img src="img/upArr.png" border="0">
-    </button>
+    <div class="scrollWrap">
+      <button class="scrollBTN">
+        <img src="img/upArr.png" border="0">
+        <p>To Top</p>
+      </button>
+    </div>
 
 
 
