Changes From Meeting

--- a/about.html
+++ b/about.html
@@ -352,6 +352,8 @@
     <footer id="footerAb" class="footer row large-12">
       <!--MAP-->
       <div id="map_canvas" class="map" alt="Google map of Cordova Elementary in Cordova, Tennessee"></div>
+      <!-- END MAP -->
+      
       <div id="footContact" class="large-12 columns">
         <div class="icons"><img src="img/contactIcon.png" alt="Icon of phone receiver"></div>
         <h1 class="">Contact</h1>
