--- a/faculty.html
+++ b/faculty.html
@@ -763,6 +763,8 @@
     <footer id="footerFa" class="footer row large-12">
       <!--MAP-->
       <div id="map_canvas" class="map" alt="Google map of Cordova Elementary in Cordova, Tennessee"></div>
+      <!-- END MAP -->
+
       <div id="footContact" class="large-12 columns">
         <div class="icons"><img src="img/contactIcon.png" alt="Icon of phone receiver"></div>
         <h1 class="">Contact</h1>
@@ -774,7 +776,7 @@
         <div class="large-3 medium-12 small-12 columns">
           <h2>Cordova Elementary</h2>
           <p>750 North Sanga<br />Cordova, TN 38018<br />
-          <a href="https://www.google.com/maps/place/Cordova+Elementary+School/@35.1462439,-89.7710587,16.54z/data=!4m5!3m4!1s0x0:0xf014b1462d7bcc7a!8m2!3d35.1462!4d-89.7691258" target="_blank">Get Directions</a><br />
+          <a href="https://www.google.com/maps/place/Cordova+Elementary+School/@35.1462439,-89.7710587,16.54z/data=!4m5!3m4!1s0x0:0xf014b1462d7bcc7a!8m2!3d35.1462!4d-89.7691258" target="_blank" alt="Get Directions to Cordova Elementary">Get Directions/View Map</a><br />
           <span>School Hours:</span> 8:15 AM - 3:15 PM</p>
         </div>
         <div class="large-3 medium-12 columns">
