--- a/index.html
+++ b/index.html
@@ -380,12 +380,7 @@
             </div>
 
             <div id="moreArtBTN" class="large-12 small-12 columns">
-              <div class="large-12 large-centered small-12 columns">
-                <button type="button" name="button">More Announcements</button>
-                <div class="moreann"><a href="#">Announcements Archive</a></div>
-                <button class="maBTN" type="button" name="button">More Announcements</button>
-                <div id="moreannMobile"><a href="#">Announcements Archive</a></div>
-              </div>
+              <div class="moreann"><a href="#">Announcements Archive</a></div>
             </div>
         </div>
 
@@ -507,12 +502,7 @@
           </div>
 
           <div id="moreCalBTN" class="large-12 small-12 columns">
-            <div class="large-12 large-centered small-12 columns">
-              <button type="button" name="button">More Events</button>
-              <div class="viewcalendar"><a href="#">Full Calendar</a></div>
-              <button class="caBTN" type="button" name="button">More Events</button>
-              <div id="morecalMobile"><a href="#">Full Calendar</a></div>
-            </div>
+            <div class="viewcalendar"><a href="#">Full Calendar</a></div>
           </div>
         </div>
       </div>
@@ -592,6 +582,8 @@
     <footer id="footerMain" class="footer row">
       <!--MAP-->
       <div id="map_canvas" class="map" alt="Google map of Cordova Elementary in Cordova, Tennessee"></div>
+      <!-- END MAP -->
+
       <div id="footContact" class="large-12 columns">
         <div class="icons"><img src="img/contactIcon.png" alt="Icon of phone receiver"></div>
         <h1 class="">Contact</h1>
